--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Observable Composing and Chaining</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto|Material+Icons" rel="stylesheet">
@@ -12,7 +12,14 @@
           <span>Observable Composing and Chaining</span>
         </div>
         <ul class="right">
-          <li><a target="_blank" href="http://reactivex.io/documentation/operators.html">Operator List</a></li>
+          <li>
+            <a
+              target="_blank"
+              href="http://reactivex.io/documentation/operators.html"
+            >
+              Operator List
+            </a>
+          </li>
           <li><a href="https://github.com/AngularBootCamp/abc#topic-list">Lesson List</a></li>
         </ul>
       </div>
