--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <li>
             <a
               target="_blank"
-              href="http://reactivex.io/documentation/operators.html"
+              href="https://rxjs.dev/guide/operators"
             >
               Operator List
             </a>
