--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,15 @@
   <head>
     <title>Observable Composing and Chaining</title>
     <base href="/" />
-   <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <nav>
-      <div class="nav-wrapper">
-        <div class="brand-logo left">
-          <a href="https://angularbootcamp.com"></a>
-          <span>Observable Composing and Chaining</span>
-        </div>
-        <ul class="right">
-          <li>
-            <a
-              target="_blank"
-              href="https://rxjs.dev/guide/operators"
-            >
-              Operator List
-            </a>
-          </li>
-        </ul>
-      </div>
+    <nav class="abc-banner">
+      <a href="https://angularbootcamp.com/"></a>
+      <span>Observable Composing and Chaining</span>
+      <a target="_blank" href="https://rxjs.dev/guide/operators">
+        RxJS Operators
+      </a>
     </nav>
     <div class="container">
       <app-root>loading...</app-root>
