--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Observable Composing and Chaining</title>
+    <title>Observable Composing And Chaining</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <nav class="abc-banner">
       <a href="https://angularbootcamp.com/"></a>
-      <span>Observable Composing and Chaining</span>
+      <span>Observable Composing And Chaining</span>
       <a target="_blank" href="https://rxjs.dev/guide/operators">
         RxJS Operators
       </a>
